--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
-  <title>Offline To Do List</title>
+  <title>Offline Drag and Drop To Do List</title>
   <link rel="stylesheet" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <meta name="viewport" content="width=device-width,	initial-scale=1.0">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <meta name="author" content="Anna Sobkowiak">
 </head>
 
 <body>
@@ -14,4 +14,5 @@
   </div>
     <script src="dist/js/out.js"></script>
 </body>
+<noscript>Your browser does not support JavaScript!</noscript>
 </html>
